--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 <section class="what_people_say_about_theHam active_flex">
 
         <h3 class="double_line"><a name="contact"></a>Contact</h3>
-        <img src="img/what_people_say_about_theHam_photos/what_people_say_about_theHam_paws.png" alt="paws">
+        <!-- <img src="img/what_people_say_about_theHam_photos/what_people_say_about_theHam_paws.png" alt="paws"> -->
              <h3 class="container_contact"> 
              <br><br>
             Are you ready to redefine your digital experience? Look no further! 
