icon + meta description + meta Content-Security-Policy

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta name="description" content="Unlock your online presence with our professional website creation team, empowering you to build stunning websites effortlessly and showcase your unique identity in the digital realm">
     <title>Create Websites</title>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"/>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -59,7 +63,7 @@
             <li>
                 <img src="https://res.cloudinary.com/dk88eyahu/image/upload/v1673764144/portfolio/elements-web-design-opt-750x498_tpqisk.jpg" alt="Web-design">
                 <p >
-                    I'm looking for inspiration everywhere. 
+                    We are looking for inspiration everywhere. 
                     Today, designing a website goes beyond aesthetics to include the website’s overall functionality. 
                     Web design also includes web apps, mobile apps, and user interface design.When designing a website it’s important to consider both the site’s appearance and functionality. 
                     Integrating these elements will maximize the site’s overall usability and performance. 
@@ -87,7 +91,7 @@
             <li>
                 <img src="https://res.cloudinary.com/dk88eyahu/image/upload/v1673817867/portfolio/Java-tutorials_dra32q.jpg" alt="Back End">
                 <p>
-                    I like Java for several reasons:
+                    We leverage Java for several reasons:
 
                     Platform Independence: Java is a "write once, run anywhere" language. This means that code written in Java can run on any platform that has a Java Virtual Machine (JVM). This platform independence is a significant advantage for cross-platform development.
                     
@@ -132,8 +136,8 @@
                     <i class="active_flex fa fa-github"></i>
                     <i class="active_flex fa fa-search"></i>
                 </div>
-                <h5>JS, Typescript, Python</h5>
-                <p>CREATIVE DESIGN</p>
+                <h5>CREATIVE DESIGN</h5>
+                <p>JS, Typescript, Python</p>
             </div>
         </li>
         <li class="active">
@@ -143,8 +147,8 @@
                     <i class="active_flex fa fa-github"></i>
                     <i class="active_flex fa fa-search"></i>  
                 </div>
-                <h5>NodeJS, Java</h5>
-                <p>BEST SOLUTION</p>
+                <h5>BEST SOLUTION</h5>
+                <p>NodeJS, Java</p>
             </div>
         </li>
         <li class="active">
@@ -154,8 +158,8 @@
                     <i class="active_flex fa fa-github"></i>
                     <i class="active_flex fa fa-search"></i>   
                 </div>
-                <h5>SQL, MongoDB</h5>
-                <p>RELIABLE DATABASE</p>
+                <h5>RELIABLE DATABASE</h5>
+                <p>SQL, MongoDB</p>
             </div>
         </li>
         <li class="active">
@@ -165,8 +169,8 @@
                     <i class="active_flex fa fa-github"></i>
                     <i class="active_flex fa fa-search"></i>
                 </div>
-                <h5>Paperflite, Salesforce Marketing Cloud, Dot.vu</h5>
-                <p>MARKETING</p>
+                <h5>MARKETING</h5>
+                <p>Paperflite, Salesforce Marketing Cloud, Dot.vu</p>
             </div>
         </li>
 
@@ -179,9 +183,9 @@
                     <!-- <a href="https://www.freecodecamp.org/certification/VadymBevziuk/javascript-algorithms-and-data-structures"></i></a>
                     <a href="https://www.freecodecamp.org/certification/VadymBevziuk/javascript-algorithms-and-data-structures" ><i class="active_flex fa fa-search"></i></a>     -->
                 </div>
-                <h5>HubSpot Marketing Hub,
-                    SE Ranking</h5>
-                <p>SEO</p>
+                <h5>SEO</h5>
+                <p>HubSpot Marketing Hub,
+                    SE Ranking</p>
             </div>
         </li>
 </section>
